--- a/template/landing.html
+++ b/template/landing.html
@@ -19,10 +19,14 @@
 </head>
 <body>
 <section id="top">
-    <div id="emotion"></div>
+    <div id="emotion">
+        <img src="/static/img/giftbox.png" class="img-responsive"/>
+    </div>
 </section>
     <section id="bottom">
-        <div id="logotext"></div>
+        <div id="logodiv">
+            <img id="logotext" src="/static/img/title.png" class="img-responsive">
+        </div>
         <div id="invite"></div>
     </section>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
