css rounding corners

--- a/template/landing.html
+++ b/template/landing.html
@@ -34,7 +34,7 @@
                     <div class="teaser-text">
                         <p>Be the first to grab a spot at our upcoming launch</p>
                     </div>
-                    <div class="input-group">
+                    <div class="input-group teaser-email">
                       <input id="email" type="text" placeholder="joe@tinktime.com" class="form-control">
                       <span id="inviteme" class="input-group-addon">invite me!</span>
                     </div>
