--- a/static/css/base.css
+++ b/static/css/base.css
@@ -42,6 +42,7 @@ html, body,header{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    border-radius: 10px;
 }
 
 .well{
@@ -62,4 +63,9 @@ html, body,header{
 text-align: center;
 vertical-align: middle;
 color: #c0dbe5;
+}
+
+.teaser-email{
+border: .5px solid #96c3d5;
+border-radius: 4px;
 }
