--- a/template/landing.html
+++ b/template/landing.html
@@ -15,7 +15,16 @@
 <link href="/static/css/base.css" rel="stylesheet" type="text/css"/>
 <!-- Mobile Devices -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"> 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-56447319-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body>
 <section id="top">
