--- a/template/landing.html
+++ b/template/landing.html
@@ -43,10 +43,14 @@
                     <div class="teaser-text">
                         <p>Be the first to grab a spot at our upcoming launch</p>
                     </div>
-                    <div class="input-group teaser-email">
-                      <input id="email" type="text" placeholder="joe@tinktime.com" class="form-control">
-                      <span id="inviteme" class="input-group-addon">invite me!</span>
-                    </div>
+                        <div class="row teaser-email">
+                            <div class="input-group">
+                              <input id="email" type="text" placeholder="joe@tinktime.com" class="form-control">
+                              <span class="input-group-btn">
+                                <button id="inviteme" class="btn btn-default" type="button">invite me!</button>
+                              </span>
+                            </div><!-- /input-group -->
+                        </div><!-- /.row -->
                     <div class="teaser-text">
                         <p>don't worry, no spam!</p>
                     </div>
