--- a/template/landing.html
+++ b/template/landing.html
@@ -27,13 +27,24 @@
 </script>
 </head>
 <body>
-<section id="top">
-    <div id="emotion">
-        <!--h1>What are you <br/>thinking of ?</h1-->
-        <img src="/static/img/giftbox.png" class="img-responsive">
+<div>
+    <div>
+        <div class="top-image">
+            <img src="/static/img/bg-index.jpg" class="img-responsive">
+        </div>
+        <div class="license">
+            <a href="https://www.flickr.com/photos/jonathankosread/" target="_blank">
+                <span class="glyphicon glyphicon-info-sign"></span>
+                <small>Some rights reserved by Jonathan Kos-Read</small>
+            </a>
+        </div>
+        <!--div id="emotion" class="pull-left">
+            <!--h1>What are you <br/>thinking of ?</h1>
+            <img src="/static/img/giftbox.png" class="img-responsive">
+        </div-->
     </div>
-</section>
-    <section id="bottom">
+</div>
+    <div id="bottom">
         <div class="lower">
         <div id="logodiv">
             <img id="logotext" src="/static/img/title.png" class="img-responsive">
@@ -57,7 +68,7 @@
              </div>
         </div>
     </div>
-    </section>
+    </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="/static/js/utility.js"></script>
