--- a/template/landing.html
+++ b/template/landing.html
@@ -27,50 +27,51 @@
 </script>
 </head>
 <body>
-<div class="main-container">
-    <div class="top-container">
-        <div class="top-image">
-                <div>
-                    <img src="/static/img/bg-index.jpg" class="img-responsive">
-                </div>
-                <div class="license">
-                    <a href="https://www.flickr.com/photos/jonathankosread/" target="_blank">
-                        <span class="glyphicon glyphicon-info-sign"></span>
-                        <small>Some rights reserved by Jonathan Kos-Read</small>
-                    </a>
-                </div>
-        </div>
-        <div class="emotion">
-            <h1>What are you <br/>thinking of ?</h1>
-            <img src="/static/img/giftbox.png" class="img-responsive">
-        </div>
-    </div>
-    <div id="bottom" class="bottom-container">
-        <div class="lower">
-        <div id="logodiv">
-            <img id="logotext" src="/static/img/title.png" class="img-responsive">
-        </div>
-        <div>
-            <div id="invite" class="well well-lg">
-                    <div class="teaser-text">
-                        <p>Be the first to grab a spot at our upcoming launch</p>
+<div class="container">
+    <div>
+        <div class="top">
+            <div class="top-image">
+                    <div>
+                        <img src="/static/img/bg-index.jpg" class="img-responsive">
                     </div>
-                        <div class="row teaser-email">
-                            <div class="input-group">
-                              <input id="email" type="text" placeholder="joe@tinktime.com" class="form-control">
-                              <span class="input-group-btn">
-                                <button id="inviteme" class="btn btn-default" type="button">invite me!</button>
-                              </span>
-                            </div><!-- /input-group -->
-                        </div><!-- /.row -->
-                    <div class="teaser-text">
-                        <p>don't worry, no spam!</p>
+                    <div class="license">
+                        <a href="https://www.flickr.com/photos/jonathankosread/" target="_blank">
+                            <span class="glyphicon glyphicon-info-sign"></span>
+                            <small>Some rights reserved by Jonathan Kos-Read</small>
+                        </a>
                     </div>
-             </div>
+            </div>
+            <div class="emotion">
+                <h1>What are you <br/>thinking of ?</h1>
+                <img src="/static/img/giftbox.png" class="img-responsive">
+            </div>
         </div>
     </div>
+    <div class="bottom">
+            <div class="lower ">
+                <div id="logodiv">
+                    <img id="logotext" src="/static/img/title.png" class="img-responsive">
+                </div>
+            <div >
+                <div id="invite" class="well well-lg">
+                        <div class="teaser-text">
+                            <p>Be the first to grab a spot at our upcoming launch</p>
+                        </div>
+                            <div class="row teaser-email">
+                                <div class="input-group">
+                                  <input id="email" type="text" placeholder="joe@tinktime.com" class="form-control">
+                                  <span class="input-group-btn">
+                                    <button id="inviteme" class="btn btn-default" type="button">invite me!</button>
+                                  </span>
+                                </div><!-- /input-group -->
+                            </div><!-- /.row -->
+                        <div class="teaser-text">
+                            <p>don't worry, no spam!</p>
+                        </div>
+                 </div>
+            </div>
+        </div>
     </div>
-
 </div>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
