--- a/template/pa_base.html
+++ b/template/pa_base.html
@@ -9,7 +9,7 @@
 <meta name="Keywords" content="">
 <title>tinktime</title>
 
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 <!--link href="/static/css/reset.css" rel="stylesheet" type="text/css" />
 <link href="/static/css/style-index.css" rel="stylesheet" type="text/css" /-->
 <link href="/static/css/base.css" rel="stylesheet" type="text/css"/>
@@ -18,12 +18,16 @@
 
 </head>
 <body>
-
+<ul class="nav nav-pills">
+  <li role="presentation" class="active"><a href="/pre-alpha/1618/">Send</a></li>
+  <li role="presentation"><a href="/pre-alpha/feed/8161/">Feed</a></li>
+</ul>
 {% block content %}
 
 {% end %}
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
 <script src="/static/js/utility.js"></script>
+<script src="/static/js/pa_util.js"></script>
 </body>
 </html>
