--- a/template/pa_send.html
+++ b/template/pa_send.html
@@ -1,7 +1,34 @@
 {% extends "pa_base.html" %}
 
 {% block content %}
-<div>
+<div class="well">
+    <div class="input-group">
+      <span class="input-group-addon">From<span class="glyphicon glyphicon-user"></span></span>
+      <input id="from" type="text" class="form-control" placeholder="senders name">
+    </div>
 
+    <div class="input-group">
+      <span class="input-group-addon">To<span class="glyphicon glyphicon-user"></span></span>
+      <input id="to" type="text" class="form-control" placeholder="receivers name">
+    </div>
+
+    <div class="input-group">
+      <span class="input-group-addon">Trinket_id<span class="glyphicon glyphicon-star-empty"></span></span>
+      <input id="trinketid" type="number" class="form-control" placeholder="trinket number">
+    </div>
+
+    <div class="input-group">
+      <span class="input-group-addon">Time in seconds<span class="glyphicon glyphicon-time"></span></span>
+      <input id="seconds" type="number" class="form-control" placeholder="seconds">
+    </div>
+
+    <div class="input-group">
+      <span class="input-group-addon">Message<span class=glyphicon glyphicon-envelope"></span></span>
+      <input id="text" type="text" class="form-control" placeholder="text message">
+    </div>
+
+    <div id="senddiv" class="alert alert-info" role="alert">
+     <button type="button" class="form-control" id="sendbtn">Send</button>
+    </div>
 </div>
 {% end %}
