--- a/template/pa_send.html
+++ b/template/pa_send.html
@@ -1,6 +1,10 @@
 {% extends "pa_base.html" %}
 
 {% block content %}
+<ul class="nav nav-pills">
+  <li role="presentation"  class="active"><a href="/pre-alpha/1618/">Send</a></li>
+  <li role="presentation"><a href="/pre-alpha/feed/8161/">Feed</a></li>
+</ul>
 <div class="well">
     <div class="input-group">
       <span class="input-group-addon">From<span class="glyphicon glyphicon-user"></span></span>
