--- a/template/landing.html
+++ b/template/landing.html
@@ -41,13 +41,19 @@
                         </a>
                     </div>
             </div>
-            <div class="emotion">
-                <h1>What are you <br/>thinking of ?</h1>
+            <div class="emotion emotion-lg visible-lg-block">
+                <h1>Who are you <br/>thinking of ?</h1>
                 <img src="/static/img/giftbox.png" class="img-responsive">
             </div>
+
         </div>
     </div>
     <div class="bottom">
+        <div class="emotion center-it hidden-lg">
+                <h1>Who are you <br/>thinking of ?</h1>
+                <img src="/static/img/giftbox.png" class="img-responsive">
+            </div>
+
             <div class="lower ">
                 <div id="logodiv">
                     <img id="logotext" src="/static/img/title.png" class="img-responsive">
