--- a/template/pa_send.html
+++ b/template/pa_send.html
@@ -17,8 +17,8 @@
     </div>
 
     <div class="input-group">
-      <span class="input-group-addon">Trinket_id<span class="glyphicon glyphicon-star-empty"></span></span>
-      <input id="trinketid" type="number" class="form-control" placeholder="trinket number">
+      <span class="input-group-addon">Trinket_name<span class="glyphicon glyphicon-star-empty"></span></span>
+      <input id="trinketid" type="number" class="form-control" placeholder="trinket name">
     </div>
 
     <div class="input-group">
