--- a/template/backoffice.html
+++ b/template/backoffice.html
@@ -17,10 +17,37 @@
 </head>
 <body>
 
+<div class="add-new-trinket well well-lg">
+<h3>Add new trinket<small>add name, image and swiffy json</small></h3>
+    <div class="input-group">
+      <span class="input-group-addon" id="basic-addon1">Name</span>
+      <input id="trinket-name" type="text" class="form-control" placeholder="trinket name, should be unique" aria-describedby="basic-addon1">
+    </div>
+    <div class="input-group">
+      <span class="input-group-addon" id="basic-addon2">Thumbnail file</span>
+      <input type="file" id="trinket-thumbnail" class="form-control" placeholder="trinket thumbnail 100*100px, should be in (kb)" aria-describedby="basic-addon2">
+    </div>
+     <div class="input-group">
+      <span class="input-group-addon" id="basic-addon3">Swiffy json</span>
+      <input type="file" id="trinket-swiffy" class="form-control" placeholder="swiffy json (< 1mb)" aria-describedby="basic-addon3">
+    </div>
+    <button id="save-new-trinket" type="button" class="btn btn-default" disabled>Default</button>
 
+</div>
+<div class="existing-trinkets well">
+    <h3>Existing trinkets<small>trinkets available to users</small></h3>
+<ul class="list-group">
+    {% for trinket in trinkets %}
+    <li class="list-group-item">{{ trinket }}</li>
+    {% end %}
+
+
+</ul>
+</div>
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 <script src="/static/js/utility.js"></script>
+<script src="/static/js/trinket.js"></script>
 </body>
 </html>
