wip download trinket

--- a/template/backoffice.html
+++ b/template/backoffice.html
@@ -10,7 +10,7 @@
 <title>tinktime</title>
 
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-<link href="/static/css/base.css" rel="stylesheet" type="text/css"/>
+
 <!-- Mobile Devices -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"> 
 
@@ -31,7 +31,7 @@
       <span class="input-group-addon" id="basic-addon3">Swiffy json</span>
       <input type="file" id="trinket-swiffy" class="form-control" placeholder="swiffy json (< 1mb)" aria-describedby="basic-addon3">
     </div>
-    <button id="save-new-trinket" type="button" class="btn btn-default" disabled>Default</button>
+    <button id="save-new-trinket" type="button" class="btn btn-default" disabled>Save trinket</button>
 
 </div>
 <div class="existing-trinkets well">
