trinket img url and swiffy

--- a/template/backoffice.html
+++ b/template/backoffice.html
@@ -26,6 +26,7 @@
     <div class="input-group">
       <span class="input-group-addon" id="basic-addon2">Thumbnail file</span>
       <input type="file" id="trinket-thumbnail" class="form-control" placeholder="trinket thumbnail 100*100px, should be in (kb)" aria-describedby="basic-addon2">
+        <img id="trinket-img-preview" src="#"/>
     </div>
      <div class="input-group">
       <span class="input-group-addon" id="basic-addon3">Swiffy json</span>
