--- a/template/backoffice.html
+++ b/template/backoffice.html
@@ -24,7 +24,7 @@
       <input id="trinket-name" type="text" class="form-control" placeholder="trinket name, should be unique" aria-describedby="basic-addon1">
     </div>
     <div class="input-group">
-      <span class="input-group-addon" id="basic-addon2">Thumbnail file</span>
+      <span class="input-group-addon" id="basic-addon2">Thumbnail file(only .png)</span>
       <input type="file" id="trinket-thumbnail" class="form-control" placeholder="trinket thumbnail 100*100px, should be in (kb)" aria-describedby="basic-addon2">
         <img id="trinket-img-preview" src="#"/>
     </div>
