swiffy files are served as htmls from content server

--- a/template/backoffice.html
+++ b/template/backoffice.html
@@ -37,10 +37,10 @@
         <img id="trinket-img-preview" src="#"/>
     </div>
      <div class="input-group">
-      <span class="input-group-addon" id="basic-addon3">Swiffy json</span>
-      <input type="file" id="trinket-swiffy" class="form-control" placeholder="swiffy json (< 1mb)" aria-describedby="basic-addon3">
+      <span class="input-group-addon" id="basic-addon3">Swiffy file(html)</span>
+      <input type="file" id="trinket-swiffy" class="form-control" placeholder="swiffy html" aria-describedby="basic-addon3">
     </div>
-    <button id="save-new-trinket" type="button" class="btn btn-default" disabled>Save trinket</button>
+    <button id="save-new-trinket" type="button" class="btn btn-default" >Save trinket</button>
 
 </div>
 <div class="existing-trinkets well">
