--- a/template/backoffice.html
+++ b/template/backoffice.html
@@ -28,6 +28,21 @@
     <button id="save-new-trinket" type="button" class="btn btn-default" >Save trinket</button>
 
 </div>
+<div class="add-new-trinket well well-lg">
+<h3>Add trinkets from directory<small>provide thumbnail and swiffy.html file directory. Matching names will be picked.</small></h3>
+    <div class="input-group">
+      <span class="input-group-addon" id="basic-addon2">Thumbnail directory(only .png)</span>
+      <input type="file" id="thumbnail_directory" webkitdirectory directory multiple/>
+
+    </div>
+     <div class="input-group">
+      <span class="input-group-addon" id="basic-addon3">Swiffy directory(html)</span>
+      <input type="file" id="swiffy_directory" webkitdirectory directory multiple/>
+    </div>
+    <button id="save-multiple-trinkets" type="button" class="btn btn-default" >Save trinket</button>
+
+</div>
+
 <div class="existing-trinkets well">
     <h3>Active trinkets<small>trinkets available to users</small></h3>
 <ul class="list-group">
@@ -35,7 +50,8 @@
     <li class="list-group-item">
         <span class="input-group-addon">
       <button type="button" class="btn btn-default deactivate">Deactivate</button>
-      <span class="label label-success">{{ trinket }}</span>
+            <img src="{{ trinket['thumbnailPath'] }}"/>
+      <span class="label label-success">{{ trinket['name'] }}</span>
       </span>
     </li>
     {% end %}
@@ -50,7 +66,7 @@
     <li class="list-group-item">
         <span class="input-group-addon">
       <button type="button" class="btn btn-default activate">Activate</button>
-      <span class="label label-success">{{ trinket }}</span>
+      <span class="label label-success">{{ trinket['name'] }}</span>
       </span>
     </li>
     {% end %}
