google play link

--- a/template/landing.html
+++ b/template/landing.html
@@ -59,22 +59,9 @@
                     <img id="logotext" src="/static/img/title.png" class="img-responsive">
                 </div>
             <div >
-                <div id="invite" class="well well-lg">
-                        <div class="teaser-text">
-                            <p>Be the first to grab a spot at our upcoming launch</p>
-                        </div>
-                            <div class="row teaser-email">
-                                <div class="input-group">
-                                  <input id="email" type="text" placeholder="joe@tinktime.com" class="form-control">
-                                  <span class="input-group-btn">
-                                    <button id="inviteme" class="btn btn-default" type="button">invite me!</button>
-                                  </span>
-                                </div><!-- /input-group -->
-                            </div><!-- /.row -->
-                        <div class="teaser-text">
-                            <p>don't worry, no spam!</p>
-                        </div>
-                 </div>
+                <a href="http://play.google.com/store/apps/details?id=com.tinktime.app">
+                    <img src="static/img/en-play-badge.png" class="img-responsive">
+                </a>
             </div>
         </div>
     </div>
