--- a/template/base.html
+++ b/template/base.html
@@ -9,7 +9,10 @@
 <meta name="Keywords" content="">
 <title>tinktime</title>
 
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
 <!-- Mobile Devices -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -21,12 +24,18 @@
 {% end %}
 </head>
 <body>
-
+<div data-role="tabs" id="tabs">
+    <div data-role="navbar">
+        <ul>
+            <li><a href="trinket.html" data-ajax="false">Trinket</a></li>
+            <li><a href="/bo/profile/" data-ajax="false">Profile</a></li>
+            <li><a href="/bo/communicate/" data-ajax="false">Communication</a></li>
+        </ul>
+        </div>
     {% block content %}
     {% end %}
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+</div>
 <script src="/static/js/utility.js"></script>
 <script src="/static/js/trinket.js"></script>
 
