--- a/template/communication.html
+++ b/template/communication.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
+<div id="tab-communicate">
+
 communication
-</body>
-</html>
+    </div>
+{% end %}
