--- a/template/base.html
+++ b/template/base.html
@@ -11,8 +11,6 @@
 
 
 <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
 <!-- Mobile Devices -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
@@ -24,18 +22,26 @@
 {% end %}
 </head>
 <body>
-<div data-role="tabs" id="tabs">
+<div data-role="tabs" id="tabs-main">
     <div data-role="navbar">
         <ul>
-            <li><a href="trinket.html" data-ajax="false">Trinket</a></li>
-            <li><a href="/bo/profile/" data-ajax="false">Profile</a></li>
-            <li><a href="/bo/communicate/" data-ajax="false">Communication</a></li>
+            <li><a href="#tab-base" data-ajax="false">Welcome</a></li>
+            <li><a href="#tab-trinket" data-ajax="false">Trinket</a></li>
+            <li><a href="#tab-profile" data-ajax="false">Profile</a></li>
+            <li><a href="#tab-communicate" data-ajax="false">Communication</a></li>
         </ul>
-        </div>
+    </div>
+    <div id="tab-base" class="ui-body-d ui-content">
+        <h1>Welcome to backoffice</h1>
+    </div>
     {% block content %}
     {% end %}
 
 </div>
+
+<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+
 <script src="/static/js/utility.js"></script>
 <script src="/static/js/trinket.js"></script>
 
