--- a/template/user_tinktime.html
+++ b/template/user_tinktime.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
-tinktime profile
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+<div id="tab-profile">
+
+profile
+    </div>
+{% end %}
