bo tab setup complete

--- a/template/communication.html
+++ b/template/communication.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
-<div id="tab-communicate">
+{% block content-communicate %}
 
 communication
-    </div>
 {% end %}
