--- a/template/base.html
+++ b/template/base.html
@@ -26,24 +26,35 @@
     <div data-role="navbar">
         <ul>
             <li><a href="#tab-base" data-ajax="false">Welcome</a></li>
-            <li><a href="#tab-trinket" data-ajax="false">Trinket</a></li>
-            <li><a href="#tab-profile" data-ajax="false">Profile</a></li>
-            <li><a href="#tab-communicate" data-ajax="false">Communication</a></li>
+            <li><a id="base-tab-trinket" href="#tab-trinket" data-ajax="false">Trinket</a></li>
+            <li><a id="base-tab-profile" href="#tab-profile" data-ajax="false">Profile</a></li>
+            <li><a id="base-tab-communicate" href="#tab-communicate" data-ajax="false">Communication</a></li>
         </ul>
     </div>
-    <div id="tab-base" class="ui-body-d ui-content">
+    <div id="tab-base">
         <h1>Welcome to backoffice</h1>
     </div>
-    {% block content %}
-    {% end %}
-
+    <div id="tab-trinket" class="ui-body-d ui-content">
+        {% block content-trinket %}
+        {% end %}
+    </div>
+    <div id="tab-profile" >
+        {% block content-profile %}
+        {% end %}
+    </div>
+    <div id="tab-communicate" >
+        {% block content-communicate %}
+        {% end %}
+    </div>
 </div>
 
 <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
+<script src="/static/js/base.js"></script>
 <script src="/static/js/utility.js"></script>
-<script src="/static/js/trinket.js"></script>
+
+
 
 {% block afterincludejs %}
 {% end %}
