--- a/template/trinket.html
+++ b/template/trinket.html
@@ -1,7 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
-<div id="tab-trinket">
+{% block content-trinket %}
     <div data-role="tabs" id="tabs-upload">
         <div data-role="navbar">
             <ul>
@@ -95,5 +94,9 @@
 
         </div>
     </div>
-</div>
+
+{% end %}
+
+{% block afterincludejs %}
+    <script src="/static/js/trinket.js"></script>
 {% end %}
