--- a/template/user_tinktime.html
+++ b/template/user_tinktime.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
-{% block content %}
-<div id="tab-profile">
+{% block content-profile %}
 
-profile
-    </div>
+<h3>profile</h3>
+{% end %}
+
+{% block afterincludejs %}
+
 {% end %}
