--- a/template/login.html
+++ b/template/login.html
@@ -1,6 +1,21 @@
-{% extends "base.html" %}
+<!DOCTYPE html>
+<html lang="pt">
 
-{% block content %}
+<head>
+
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" >
+<meta name="Description" content="">
+<meta name="Keywords" content="">
+<title>tinktime</title>
+
+
+<!-- Mobile Devices -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
+
+</head>
+<body>
 
        <h3>Login via:</h3>
 
@@ -11,10 +26,6 @@
 
 </div>
 <div class="spacer"></div>
-{% end %}
-
-{% block afterincludejs %}
             <script src="/static/js/login.js"></script>
-{% end %}
-{% block afterjscripts %}
-{% end %}
+</body>
+</html>
