--- a/template/login.html
+++ b/template/login.html
@@ -28,6 +28,7 @@
 <div class="spacer"></div>
        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
 
+<script src="/static/js/utility.js"></script>
             <script src="/static/js/login.js"></script>
 </body>
 </html>
