--- a/template/base.html
+++ b/template/base.html
@@ -55,7 +55,7 @@
 
 <script src="/static/js/base.js"></script>
 <script src="/static/js/utility.js"></script>
-
+<script src="/static/js/jquery.cookie.js"></script>
 
 
 {% block afterincludejs %}
