--- a/template/login.html
+++ b/template/login.html
@@ -30,5 +30,6 @@
 
 <script src="/static/js/utility.js"></script>
             <script src="/static/js/login.js"></script>
+<script src="/static/js/jquery.cookie.js"></script>
 </body>
 </html>
