bo random profile done

--- a/template/user_tinktime.html
+++ b/template/user_tinktime.html
@@ -34,6 +34,10 @@
             </div>
             <button id="save-multiple-random_pictures" type="button" class="btn btn-default" >Save</button>
         </div>
+        <div id="list-random_images" class="ui-grid-b">
+
+
+        </div>
 
     </div>
 
