--- a/template/communication.html
+++ b/template/communication.html
@@ -2,22 +2,7 @@
 
 {% block content-communicate %}
 
-    <div id="tab-trinket-single" class="ui-body-d ui-content">
-    <form>
-        <label for="txtPhoneNumber">Phone number:</label>
-        <input type="text" name="txtPhoneNumber" id="txtPhoneNumber" value="" placeholder="+46000000001">
-        <label for="imgCurrentPic">Current Picture:</label>
-        <img name="imgCurrentPic" id="imgCurrentPic" src="#">
-
-        <p>
-            <span>Change profile pic (only .png)</span>
-            <input type="file" id="profile_thumbnail"/>
-        <img id="profile-img-preview" src="#"/></p>
-        <button id="saveProfile" class="ui-btn">Save</button>
-    </form>
-
-</div>
-
+    <p>work in progress</p>
 {% end %}
 
 {% block afterincludejs %}
